[package]
name = "conohacert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
awc = { version = "3.0.0", features = ["openssl"] }
chrono = { version = "0.4.19", features = ["serde"] }
confy = "0.4.0"
openssl = { version = "0.10.40", features = ["vendored"] }
regex = "1.5.5"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
toml = "0.5.9"
uuid = { version = "1.0.0", features = ["serde"] }
